add get draft endpoint
